--- a/templates/answers.html
+++ b/templates/answers.html
@@ -5,11 +5,23 @@
 {% endblock %}
 
 {% block content %}
-    {% include "single_question.html" with likes=question.likes title=question.title tags=question.tags body=question.body %}
+    {% include "single_question.html" with  id=question.id likes=question.likes title=question.title tags=question.tags body=question.body %}
 
     <hr class="hr-style">
 
     {% for answer in answers%}
         {% include "single_answer.html" with likes=answer.likes body=answer.body %}
     {% endfor %}
+    {% include "paginator.html" with pages=answers %}
+
+
+    <hr class="hr-style">
+            <form class="form-horizontal">
+                <div class="form-group">
+                        <textarea class="form-control" placeholder="Enter your answer here"></textarea>
+                </div>
+                <div class="form-group">
+                        <button type="submit" class="btn btn-default alert-danger">Ask</button>
+                </div>
+            </form>
 {% endblock %}
