--- a/templates/single_answer.html
+++ b/templates/single_answer.html
@@ -3,7 +3,7 @@
         <img src="/images/dog2.jpg" class="img-circle question-pic div-center">
 
         <div class="div-center">
-            <h5>{{likes}}</h5>
+            <h5>{{answer.likes}}</h5>
         </div>
         <div class="btn-group btn-group-justified" role="group" aria-label="...">
             <div class="btn-group" role="group">
@@ -21,7 +21,7 @@
 
     </div>
     <div class="col-md-10">
-        <p>{{body}}</p>
+        <p>{{answer.body}}</p>
         </p>
         <div class="checkbox">
             <label>
