--- a/templates/answers.html
+++ b/templates/answers.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block content %}
-    {% include "single_question.html" with  id=question.id likes=question.likes title=question.title tags=question.tags body=question.body %}
+    {% include "single_question.html" %}
 
     <hr class="hr-style">
 
     {% for answer in answers%}
-        {% include "single_answer.html" with likes=answer.likes body=answer.body %}
+        {% include "single_answer.html" %}
     {% endfor %}
     {% include "paginator.html" with pages=answers %}
 
