--- a/templates/questions.html
+++ b/templates/questions.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% for question in questions  %}
-        {% include "single_question.html" with id=question.id likes=question.likes title=question.title tags=question.tags body=question.body %}
+        {% include "single_question.html" %}
     {% endfor %}
     {% include "paginator.html" with pages=questions %}
 {% endblock %}
