--- a/templates/ask.html
+++ b/templates/ask.html
@@ -7,28 +7,21 @@ Login
 {% block content %}
 <h2>New Question</h2>
 <hr class="hr-style">
-<form class="form-horizontal">
-    <div class="form-group  has-error has-feedback">
-        <label for="inputTitle" class="col-sm-1 control-label">Title</label>
-        <div class="col-sm-11">
-            <input class="form-control" id="inputTitle" placeholder="Enter your title" maxlength="35">
-            <span class="glyphicon glyphicon-remove form-control-feedback"></span>
-            <p>Invalid title</p>
+{% if form.non_field_errors %}
+    <p>Wrong login or password</p>
+{% endif %}
+<form class="form-horizontal" method="post" action="{% url 'ask' %}">
+    {% csrf_token %}
+
+    {% for field in form %}
+    <div class="form-group {% if field.errors %} has-error {% endif %}">
+        {{field.errors}}
+        <label for="input{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
+        <div class="col-sm-5" class="form-control" id="input{{ field.label }}">
+            {{ field }}
         </div>
     </div>
-    <div class="form-group">
-        <label for="inputText" class="col-sm-1 control-label">Text</label>
-        <div class="col-sm-11">
-            <textarea maxlength="500" rows="15" class="form-control" id="inputText"
-                      placeholder="Enter your question"></textarea>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="inputTags" class="col-sm-1 control-label">Tags</label>
-        <div class="col-sm-11">
-            <input class="form-control" id="inputTags" placeholder="Enter tags" maxlength="35">
-        </div>
-    </div>
+    {% endfor %}
     <div class="form-group">
         <div class="col-sm-offset-1 col-sm-11">
             <button type="submit" class="btn btn-default alert-danger">Ask</button>
