--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'new_questions' %}">
                 <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
                 AskThem</a>
         </div>
@@ -45,18 +45,22 @@
             </form>
 
             <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="#">Log in</a></li>-->
+                {% if user.is_authenticated %}
                 <li><img src="/images/avatar.jpg" class="img-thumbnail " id="avatar"></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Dr.Pepper <span class="caret"></span></a>
+                       aria-expanded="false">{{user.get_username}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Settings</a></li>
                         <li><a href="#">Answers</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Log out</a></li>
+                        <!--<li><a href="{% url 'logout_page' %}?next={{ request.path }}">Log out</a></li>-->
+                        <li><a href="{% url 'logout_page' %}?next={{ request.path }}">Log out</a></li>
                     </ul>
                 </li>
+                {% else %}
+                <li><a href="{% url 'login_page' %}?next={{ request.path }}">Log in</a></li>
+                {% endif %}
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
