--- a/templates/answers.html
+++ b/templates/answers.html
@@ -34,7 +34,7 @@
     {% endfor %}
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-5">
-            <button type="submit" class="btn btn-default alert-danger">Ask</button>
+            <button type="submit" class="btn btn-default alert-danger">Answer</button>
         </div>
     </div>
 </form>
