--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
 {% if form.non_field_errors %}
     <p>{{form.non_field_errors}}</p>
 {% endif %}
-<form class="form-horizontal" method="post" action="{% url 'signup' %}">
+<form class="form-horizontal" enctype="multipart/form-data" method="post" action="{% url 'signup' %}">
     {% csrf_token %}
 
     {% for field in form %}
