Added ajax likes

--- a/templates/answers.html
+++ b/templates/answers.html
@@ -14,6 +14,8 @@
     {% include "single_answer.html" %}
 {% endfor %}
 
+<script src="/js/likes.js"></script>
+<script src="/js/correct.js"></script>
 {% include "paginator.html" with pages=answers %}
 
 <hr class="hr-style">
