--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+<script src="/js/jquery-2.2.3.min.js"></script>
+<script src="/js/js.cookie.js"></script>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -53,7 +55,7 @@
                        aria-expanded="false">{{user.get_username}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'profile' request.user.get_username %}">Profile</a></li>
-                        <li><a href="#">Settings</a></li>
+                        <li><a href="{% url 'edit' ''%}">Settings</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="{% url 'logout_page' %}?next={{ request.path }}">Log out</a></li>
                     </ul>
@@ -100,7 +102,7 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/js/jquery.min.js"></script>
+<!--<script src="/js/jquery.min.js"></script>-->
 <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
