--- a/templates/settings.html
+++ b/templates/settings.html
@@ -32,9 +32,6 @@
 </form>
 
 
-{% if form_password.non_field_errors %}
-    <p>{{form_password.non_field_errors}}</p>
-{% endif %}
 <form class="form-horizontal" method="post" action="{% url 'edit' 'password' %}">
      {% csrf_token %}
 
@@ -54,7 +51,24 @@
     </div>
 </form>
 
+<form class="form-horizontal" enctype="multipart/form-data" method="post" action="{% url 'edit' 'picture' %}">
+    {% csrf_token %}
 
+    {% for field in form_picture %}
+    <div class="form-group {% if field.errors %} has-error {% endif %}">
+        {{field.errors}}
+        <label for="input{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
+        <div class="col-sm-5" class="form-control" id="input{{ field.label }}">
+            {{ field }}
+        </div>
+    </div>
+    {% endfor %}
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-5">
+            <button type="submit" class="btn btn-default alert-danger">Change picture</button>
+        </div>
+    </div>
+</form>
 
 
 {% endblock %}
