--- a/templates/single_question.html
+++ b/templates/single_question.html
@@ -1,17 +1,20 @@
+ {% load user_extras %}
 <div class="row">
     <div class="col-md-2">
         <img src="/images/answer.jpg" class="img-circle answer-pic div-center">
         <div class="div-center">
-            <h5>{{question.rating}}</h5>
+            <h5 id="like_{{question.id}}">{{question.likes_amount}}</h5>
         </div>
         <div class="btn-group btn-group-justified" role="group" aria-label="...">
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default btn-sm btn-success" aria-label="Left Align">
+                <button type="button" class="like btn btn-default btn-sm btn-success" data-qid="{{question.id}}"
+                        data-typ="like" aria-label="Left Align" id="up_{{question.id}}" {% is_disabled question.id user.id 1 %}>
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                 </button>
             </div>
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default btn-sm btn-danger" aria-label="Left Align">
+                <button type="button" class="like btn btn-default btn-sm btn-danger" data-qid="{{question.id}}"
+                        data-typ="hate" aria-label="Left Align" id="down_{{question.id}}" {% is_disabled question.id user.id 0 %}>
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                 </button>
             </div>
@@ -20,7 +23,7 @@
     <div class="col-md-10">
         <h2><a href="{% url 'id_question' question.id %}"> {{question.title}} {{question.id}}</a></h2>
         <p>{{question.text}}</p>
-        <p>By <a href="{% url 'profile' question.author.get_username %}">{{question.author.get_username}}</a> </p>
+        <p>By <a href="{% url 'profile' question.author.get_username %}">{{question.author.get_username}}</a></p>
         <p>
             Tags:&nbsp;
             {% for tag in question.tags.all %}
