--- a/templates/answers.html
+++ b/templates/answers.html
@@ -17,27 +17,19 @@
 <script src="/js/likes.js"></script>
 <script src="/js/correct.js"></script>
 {% include "paginator.html" with pages=answers %}
-
+{% if user.is_authenticated %}
 <hr class="hr-style">
-{% if form.non_field_errors %}
-    <p>Wrong answer</p>
-{% endif %}
 <form class="form-horizontal" method="post" action="{% url 'id_question' question.id %}">
     {% csrf_token %}
 
     {% for field in form %}
-    <div class="form-group {% if field.errors %} has-error {% endif %}">
-        {{field.errors}}
-        <label for="input{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
-        <div class="col-sm-5" class="form-control" id="input{{ field.label }}">
-            {{ field }}
-        </div>
-    </div>
+        {% include "form_field.html" %}
     {% endfor %}
     <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-5">
+        <div class="col-sm-offset-2">
             <button type="submit" class="btn btn-default alert-danger">Answer</button>
         </div>
     </div>
 </form>
+{% endif %}
 {% endblock %}
