--- a/templates/ask.html
+++ b/templates/ask.html
@@ -7,23 +7,14 @@ Login
 {% block content %}
 <h2>New Question</h2>
 <hr class="hr-style">
-{% if form.non_field_errors %}
-    <p>Wrong login or password</p>
-{% endif %}
 <form class="form-horizontal" method="post" action="{% url 'ask' %}">
     {% csrf_token %}
 
     {% for field in form %}
-    <div class="form-group {% if field.errors %} has-error {% endif %}">
-        {{field.errors}}
-        <label for="input{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
-        <div class="col-sm-5" class="form-control" id="input{{ field.label }}">
-            {{ field }}
-        </div>
-    </div>
+        {% include "form_field.html" %}
     {% endfor %}
     <div class="form-group">
-        <div class="col-sm-offset-1 col-sm-11">
+        <div class="col-sm-offset-2">
             <button type="submit" class="btn btn-default alert-danger">Ask</button>
         </div>
     </div>
