--- a/templates/base.html
+++ b/templates/base.html
@@ -81,18 +81,11 @@
         <div class="col-md-3">
             <h2>Popular tags</h2>
             <hr class="hr-style">
-            <p><a href="#">perl</a>&nbsp;&nbsp;&nbsp;<a href="#">python</a>&nbsp;&nbsp;&nbsp;<a href="#">TechnoPark</a>
-            </p>
-            <p><a href="#">MySQL</a>&nbsp;&nbsp;&nbsp;<a href="#">Django</a></p>
-            <p><a href="#">Mail.ru</a>&nbsp;&nbsp;&nbsp;<a href="#">Voloshin</a>&nbsp;&nbsp;&nbsp;<a
-                    href="#">Firefox</a></p>
+            {% best_tags %}
             <h2>Best Members</h2>
             <hr class="hr-style">
-            <p><a href="#">Mr. Freeman</a></p>
-            <p><a href="#">Dr. House</a></p>
-            <p><a href="#">Bender</a></p>
-            <p><a href="#">Queen Victoria</a></p>
-            <p><a href="#">V Pupkin</a></p>
+
+            {% best_users %}
         </div>
     </div>
 
